# gl-learn

./: .gitignore  .gitmodules  :w  ;  CMakeLists.txt  README.md
.cache/clangd/index/: ansicolor_sink-inl.h.35A686CAD7F4C230.idx  ansicolor_sink.h.4129A32201101764.idx  async.cpp.912751971C87785C.idx  async.h.A2266AA601DC57BA.idx  async_logger-inl.h.E9DF2A02C845B74C.idx  async_logger.h.16D31A79AA4F6F05.idx  backtracer-inl.h.EF0E6137B92060C6.idx  backtracer.h.CF0CF3A0465DE8C9.idx  base_sink-inl.h.047DF08E76AECB0C.idx  base_sink.h.9458AE0412545787.idx  basic_file_sink-inl.h.FB291D6B53906F69.idx  basic_file_sink.h.AFC1A95D1D2EC15B.idx  bundled_fmtlib_format.cpp.92FDD01AC0E1AC4D.idx  cfg.cpp.FDC9729D1D067BA4.idx  circular_q.h.71CA4B21042B2190.idx  color_sinks.cpp.88428F1C3E45186D.idx  common-inl.h.48A283235FB9FE19.idx  common.h.562DEAC28F2DF413.idx  console_globals.h.E85795A500091AA6.idx  context.c.0F20C0AF3094A6B7.idx  core.h.572EB466EA7844B5.idx  egl_context.c.F44285E0A11F9227.idx  file_helper-inl.h.1D9EA7D41D9428CC.idx  file_helper.h.BC913512F2B3D71E.idx  file_sinks.cpp.F8BEF60DEABCF826.idx  fmt.h.56F7529D3D52D1BC.idx  fmt_helper.h.D29F20AFE849EC02.idx  format-inl.h.96528FB526F2456A.idx  format.h.14CFDB12C3067F5F.idx  formatter.h.770BF4719CB4862B.idx  glfw3.h.294E6F7AB210C21F.idx  glfw3native.h.FB6118D9646C3AE8.idx  glx_context.c.FABDF161CDDFC5C8.idx  helpers-inl.h.FF40504383E8BAE6.idx  helpers.h.1D7407465AC21E93.idx  init.c.686B17292F6875F0.idx  input.c.F9A345B84E774F06.idx  internal.h.BB287C9692104322.idx  linux_joystick.c.927C7B07D2402D62.idx  linux_joystick.h.F54A429D35BE2C0D.idx  (+66 more)
lib/glad/: glad.h
lib/miniaudio/: CMakeLists.txt
src/: CMakeLists.txt  audio.cpp  audio.hpp  constants.hpp  constants.hpp.in  glad.c  img.cpp  img.hpp  main.cpp  shader.cpp  shader.hpp  shaders.hpp  window.cpp  window.hpp
src/res/shdrs/: fragmentShader.glsl  fragmentShader1.glsl  vertexShader.glsl  vertexShader1.glsl
src/window/: CMakeLists.txt  window.cpp  window.hpp
